[package]
name = "landis"
version = "0.1.0"
authors = ["Spencer Sharkey <spencer@sf-n.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastanvil = "0.14"
fastnbt = "0.14"
flate2 = { version = "1.0", features = ["tokio"] }
image = "0.23"
notify = "4.0"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
tar = "0.4"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
http = "0.2.2"