[package]
authors = ["Spencer Sharkey <spencer@sf-n.com>"]
edition = "2018"
name = "landis"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastanvil = "0.21"
fastnbt = "1.1.0"
fastnbt-tools = "0.21"
flate2 = {version = "1.0.20", features = ["tokio"]}
http = "0.2.4"
image = "0.23.14"
notify = "4.0.17"
serde = {version = "1.0.127", features = ["derive"]}
serde_json = "1.0"
tar = "0.4.35"
tokio = {version = "1.9.0", features = ["full"]}
warp = "0.3.1"

[profile.release]
lto = true
